chanfe width for header and portal-colums

--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -1,4 +1,6 @@
 #portal-header {
+    margin: 0 auto;
+    max-width: 1920px;
     position: relative;
     z-index: inherit;
 }
@@ -9,7 +11,6 @@
     max-height: @height-banner;
     max-width: 100%;
     position: relative;
-    width: 100%;
     z-index: 1;
 }
 .main-homepage #top-logo-slogan-actions {
@@ -19,7 +20,6 @@
     color: @front;
     position: absolute;
     top:0;
-    width: 100%;
     z-index: 2;
 }
 #top-logo-slogan-actions-inner {
@@ -72,7 +72,6 @@
     background: #fff;
     margin-right: auto;
     margin-top:0;
-    width: 100%;
 }
 #navWrapper {
     background-color: transparent !important;
