--- a/cpskin/diazotheme/spirit/static/less/variables.less
+++ b/cpskin/diazotheme/spirit/static/less/variables.less
@@ -4,5 +4,5 @@
 @width-logo: 150px;
 @background: #000000;
 @front: #ffffff;
-@width-content: 90%;
+@width-content: 1200px;
 @nav-transparent: transparent;
