--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -249,3 +249,106 @@ dl.actionMenu.activated dt a{
     text-align: right;
     bottom: 0;
 }
+.slider-multiple #slider-actualites {
+    display: none;
+}
+.slider-multiple .carousel.flexslider {
+    background-color: #eaeaea;
+    padding-bottom: 50px;
+}
+.slider-multiple .carousel.flexslider ul > li {
+    background: #fff;
+    color: #000;
+}
+.slider-multiple .carousel.flexslider ul > li > a {
+    max-height: 200px;
+    overflow: hidden;
+}
+#content #flex .flexslider a,
+#content #flex .flexslider #content #flex a:hover,
+#content #flex .flexslider a:link {
+    color: #000 !important;
+}
+.slider-multiple .carousel.flexslider .flex-caption {
+    margin-bottom: 2em;
+}
+.slider-multiple .carousel.flexslider ul > li .publication-date {
+    padding: 0.5em;
+}
+.slider-multiple .carousel.flexslider ul > li .flex-caption > h2 {
+    font-size: 1em;
+    line-height: 2em;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+.slider-multiple .carousel.flexslider ul > li .read-next-link {
+    display: none;
+}
+.slider-multiple .carousel.flexslider .flex-direction-nav {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+}
+.slider-multiple .carousel.flexslider .flex-direction-nav li {
+    background: #000000 !important;
+    width: 60px;
+    height: 60px;
+    margin-bottom: 0;
+    margin-right: 0;
+    margin-top: 1em;
+    overflow: hidden;
+}
+.slider-multiple .carousel.flexslider .flex-direction-nav a {
+    display: block;
+    overflow: visible;
+    margin: 0;
+}
+.slider-multiple .carousel.flexslider .flex-direction-nav li a {
+    color: transparent !important;
+    padding-top: 5px !important;
+}
+.slider-multiple .carousel.flexslider .flex-direction-nav a {
+    opacity: 1;
+    position: relative;
+    transition: none;
+    right: 0;
+    left: 0;
+    top: 0;
+}
+.slider-multiple .carousel.flexslider .flex-direction-nav a::before {
+    color: #fff;
+    height: 60px !important;
+    margin-top: 15px;
+    font-size: 15px;
+}
+.slider-multiple .carousel.flexslider .flex-direction-nav .flex-disabled {
+    opacity: 0.5 !important;
+}
+.slider-multiple .carousel.flexslider .flex-direction-nav .flex-prev {
+    margin-left: 30px;
+}
+.slider-multiple .carousel.flexslider .flex-direction-nav .flex-next {
+    margin-left: -10px;
+}
+.voir-tout {
+    background: @magenta !important;
+    width: 60px;
+    height: 60px;
+    margin-bottom: 0;
+    margin-top: -30px;
+    margin-right: 0;
+    overflow: hidden;
+    right: 0;
+}
+.voir-tout::before {
+    color: #ffffff;
+    content: "+";
+    display: inline-block;
+    font-size: 20px;
+    height: 60px;
+    margin-left: 24px;
+    margin-top: 18px;
+}
+.voir-tout a {
+    color: transparent;
+}
