--- a/cpskin/diazotheme/spirit/static/less/variables.less
+++ b/cpskin/diazotheme/spirit/static/less/variables.less
@@ -1,4 +1,4 @@
-@magenta: #d7004e;
+@theme: #d7004e;
 @black: #000000;
 @height-banner: 500px;
 @width-logo: 150px;
@@ -7,3 +7,4 @@
 @width-content: 1200px;
 @nav-transparent: transparent;
 @nav-opaticy:rgba(0, 0, 0, 0.5);
+@size-day-month: 80px;
