Add style for search content in agenda
This refs IMIO ##

--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -508,3 +508,100 @@ dl.actionMenu.activated dt a{
 .agenda .results ul .bloc-item .documentByLine {
     display: none;
 }
+// section-evenements subsection-agenda
+// Recherche
+.section-evenements.subsection-agenda #top-area {
+    background: #f2f2f2;
+}
+.section-evenements.subsection-agenda #c3_widget {
+    display: block !important;
+}
+.section-evenements.subsection-agenda input[type="text"] {
+    background: #ffffff;
+    border: none !important;
+    border-radius: @border-radius-input;
+    height: @input-height !important;
+    padding-right: 0;
+    width: 15em !important;
+}
+.section-evenements.subsection-agenda input.hasDatepicker {
+    width: 7em !important;
+}
+.section-evenements.subsection-agenda .faceted-top-widgets {
+    padding-right: 0 !important;
+    padding: 2em;
+}
+.section-evenements.subsection-agenda .faceted-top-widgets .faceted-widget:last-child {
+    margin-bottom: 2em;
+}
+.section-evenements.subsection-agenda #faceted-form fieldset {
+    padding: 0 !important;
+}
+.section-evenements.subsection-agenda .widget-fieldset legend {
+    float: left;
+    font-weight: normal;
+    font-size: 100% !important;
+}
+.section-evenements.subsection-agenda .section-public-cible,
+.section-evenements.subsection-agenda .section-tarification {
+    display: none !important;
+}
+.section-evenements.subsection-agenda .widget-fieldset form {
+    display: flex;
+}
+.section-evenements.subsection-agenda .section-affichage {
+    width: 100%;
+    white-space: nowrap;
+}
+.section-evenements.subsection-agenda .faceted_select {
+    max-width: 20em !important;
+    min-width: 15em !important;
+}
+.section-evenements.subsection-agenda #faceted-form .select2-container .select2-choice {
+    border-top-left-radius: @border-radius-input;
+    border-bottom-left-radius: @border-radius-input;
+    background: @front !important;
+    height: @input-height;
+    border: none !important;
+    line-height: @input-height;
+    color: gray;
+    padding: 0.2em 1em;
+    font-size: 0.9em;
+}
+.section-evenements.subsection-agenda .select2-container .select2-choice .select2-arrow {
+    background: @background;
+    color: @front;
+    border-left: none !important;
+    text-align: center;
+    width: @input-height;
+}
+.section-evenements.subsection-agenda .select2-container .select2-choice .select2-arrow b {
+    background: @background;
+}
+.section-evenements.subsection-agenda .select2-container .select2-choice .select2-arrow b::before {
+    content: "+";
+    line-height: 40px;
+}
+.section-evenements.subsection-agenda .widget-fieldset li {
+    display: flex !important;
+    margin-left: 0em !important;
+}
+.section-evenements.subsection-agenda .widget-fieldset li label {
+    padding: 0.4em 1em 0 0.5em;
+}
+.section-evenements.subsection-agenda .widget-fieldset.faceted-criteria legend {
+    float: none;
+}
+.section-evenements.subsection-agenda .widget-fieldset.faceted-criteria a {
+    visibility: hidden;
+}
+.section-evenements.subsection-agenda .widget-fieldset.faceted-criteria a::after {
+    color: @theme;
+    content: "❌";
+    height: 10px;
+    visibility: visible;
+    width: 10px;
+}
+.section-evenements.subsection-agenda .widget-fieldset.faceted-criteria .faceted-criteria-reset a {
+    visibility: visible;
+}
