--- a/cpskin/diazotheme/spirit/static/less/variables.less
+++ b/cpskin/diazotheme/spirit/static/less/variables.less
@@ -8,3 +8,5 @@
 @nav-transparent: transparent;
 @nav-opaticy:rgba(0, 0, 0, 0.5);
 @size-day-month: 80px;
+@border-radius-input: 7px;
+@input-height: 35px;
