Add style to agenda title in homepage
This refs IMIO ##

--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -470,6 +470,14 @@ dl.actionMenu.activated dt a{
 }
 
 //Agenda
+.agenda .titre-rss,
+.agenda .titre-rss a {
+    float: none;
+    background-color: transparent;
+}
+.agenda .bloc-rss {
+    display: none;
+}
 .agenda .results ul .bloc-item {
     float: none;
     min-height: 0;
