--- a/cpskin/diazotheme/spirit/static/less/variables.less
+++ b/cpskin/diazotheme/spirit/static/less/variables.less
@@ -11,5 +11,6 @@
 @size-day-month: 80px;
 @border-radius-input: 7px;
 @input-height: 35px;
-@slider-background:#eaeaea;
+@slider-background: #eaeaea;
+@bg-nav-fac: #f1efef;
 
